2021-11-04 Shuwei Ye <yesw@bnl.gov>
  * Added pilot2-prmon.tgz to allow run prmon (memory monitor) Rubin jobs
  * Many missing docs for the changes between 2021-05-13 and 2021-11-04

2021-05-13 Shuwei Ye <yesw@bnl.gov>
  * cric_pandaqueues-timefloor.json
    Set timefloor=60m, to allow multiple payload jobs in one single pilot.
    (That was the case before)
  * cric_pandaqueues-no_timefloor.json
    Set timefloor=null,to allow one payload job in one single pilot.
  * runpilot2-wrapper-{timefloor,no_timefloor}.sh
    Using {timefloor,no_timefloor}-version of pandaqueue respectively.
  * pilots_starter-{timefloor,no_timefloor}.py
    Using {timefloor,no_timefloor}-version of runpilot2-wrapper.sh
  * pilots_starter-logFile.py
    Using timefloor.

2021-05-13 Shuwei Ye <yesw@bnl.gov>
  * pilots_starter-logFile.py
    A copy of pilots_starter.py with the logging to /tmp/starter.log

2021-05-12 Shuwei Ye <yesw@bnl.gov>
  * runpilot2-wrapper.sh
    Improved the python version check to be compatible with python3

2021-05-12 Shuwei Ye <yesw@bnl.gov>
  * pilots_starter.py
    Added some protection on CONFIG_FILES.
  * runpilot2-wrapper.sh
    Added the downloading of queuedata.json to speed up pilot running.

2021-05-12 Shuwei Ye <yesw@bnl.gov>
  * runpilot2-wrapper.sh
    Changed the variable pybin to try "python3" first.

2021-05-12 Shuwei Ye <yesw@bnl.gov>
    Added two json files for DDM-endpoint (GKE-LSST_LOGS) and panda queue
    DOMA_LSST_DEV, the full pilot2.
  * cric_ddmendpoints.json
    Configuration for RSE=GKE-LSST_LOGS
  * cric_pandaqueues.json
    Configuration for panda queue=DOMA_LSST_DEV
  * pilot2-gcs.tgz
    The full pilot2 package with plugin gs.py for GCS bucket
  * pilots_starter.py
    - Changed the location of pilot2
    - Some changes with CONFIG_DIR to make push works for k8s
  * runpilot2-wrapper.sh
    - Changed the location to download cric_pandaqueues.json
    - Changed the location to download cric_ddmendpoints.json

